[gd_scene load_steps=18 format=3 uid="uid://uashoprrtydn"]

[ext_resource type="Script" path="res://container.gd" id="1_52hx8"]
[ext_resource type="Texture2D" uid="uid://bgsye565mw1kh" path="res://environment/treasurechest.png" id="2_kljpc"]
[ext_resource type="Texture2D" uid="uid://25uw6j728egs" path="res://environment/crate.png" id="3_i2no4"]
[ext_resource type="Texture2D" uid="uid://di0g13lxryncm" path="res://environment/vase.png" id="4_rfytq"]

[sub_resource type="Animation" id="Animation_sybbl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chest:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6opkj"]
resource_name = "treasure_break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chest:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_brasi"]
resource_name = "treasure_open"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chest:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgj6o"]
_data = {
"RESET": SubResource("Animation_sybbl"),
"treasure_break": SubResource("Animation_6opkj"),
"treasure_open": SubResource("Animation_brasi")
}

[sub_resource type="Animation" id="Animation_pe4xk"]
resource_name = "crate_break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../crate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../crate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_2q0lf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../crate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../crate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fgg8c"]
resource_name = "crate_open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../crate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../crate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nh0oj"]
_data = {
"RESET": SubResource("Animation_2q0lf"),
"crate_break": SubResource("Animation_pe4xk"),
"crate_open": SubResource("Animation_fgg8c")
}

[sub_resource type="Animation" id="Animation_wjc7p"]
resource_name = "vase_break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vase:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vase:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_g4idt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vase:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vase:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("vase:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2fetx"]
resource_name = "vase_open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vase:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vase:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rg0xn"]
_data = {
"RESET": SubResource("Animation_g4idt"),
"vase_break": SubResource("Animation_wjc7p"),
"vase_open": SubResource("Animation_2fetx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0aqh"]
size = Vector2(64, 48)

[node name="container" type="CharacterBody2D"]
z_index = 2
position = Vector2(0, 0.3)
script = ExtResource("1_52hx8")

[node name="chest" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_kljpc")
hframes = 2

[node name="chest_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pgj6o")
}

[node name="crate" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_i2no4")
hframes = 2

[node name="crate_anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../chest")
libraries = {
"": SubResource("AnimationLibrary_nh0oj")
}

[node name="vase" type="Sprite2D" parent="."]
texture = ExtResource("4_rfytq")
hframes = 2

[node name="vase_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rg0xn")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.3)
shape = SubResource("RectangleShape2D_u0aqh")

[connection signal="animation_finished" from="chest_anim" to="." method="_on_chest_anim_animation_finished"]
[connection signal="animation_finished" from="crate_anim" to="." method="_on_crate_anim_animation_finished"]
[connection signal="animation_finished" from="vase_anim" to="." method="_on_vase_anim_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
